<resources>
    <string name="app_name">FinalApp</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="greeting">What kind of dog would you like to see, "</string>
    <string name="question_mark">"?"</string>
    <string name="terrier">"terrier"</string>
    <string name="spaniel">"spaniel"</string>
    <string name="retriever">"retriever"</string>
    <string name="poodle">"poodle"</string>
    <string name="logout">"logout"</string>
</resources>
