<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context="com.volha.finalapp.LoginActivity"
  >

    <EditText
      android:id="@+id/username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:layout_marginBottom="@dimen/activity_login_margin"
      />

    <EditText
      android:id="@+id/password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:layout_marginBottom="@dimen/activity_login_margin"
      />

    <Button
      android:id="@+id/submit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      />

</LinearLayout>
