<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="@dimen/activity_breeds_margin"
  >

    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      tools:context="com.volha.finalapp.BreedsActivity"
      >

        <TextView
          android:id="@+id/greeting"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_breeds_margin"
          />

        <android.support.v7.widget.CardView
          android:id="@+id/terrier_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_breeds_margin"
          >

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              >

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:text="@string/terrier"
                  />

                <ImageView
                  android:id="@+id/terrier"
                  android:layout_width="0dp"
                  android:layout_height="100dp"
                  android:layout_weight="4"
                  />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
          android:id="@+id/spaniel_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_breeds_margin"
          >

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              >

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:text="@string/spaniel"
                  />

                <ImageView
                  android:id="@+id/spaniel"
                  android:layout_width="0dp"
                  android:layout_height="100dp"
                  android:layout_weight="4"
                  />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
          android:id="@+id/retriever_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_breeds_margin"
          >

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              >

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:text="@string/retriever"
                  />

                <ImageView
                  android:id="@+id/retriever"
                  android:layout_width="0dp"
                  android:layout_height="100dp"
                  android:layout_weight="4"
                  />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
          android:id="@+id/poodle_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/activity_breeds_margin"
          >

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              >

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:text="@string/poodle"
                  />

                <ImageView
                  android:id="@+id/poodle"
                  android:layout_width="0dp"
                  android:layout_height="100dp"
                  android:layout_weight="4"
                  />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
